fixed spacing issue

--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -36,3 +36,6 @@ body.is-preload #header .content .inner {
   margin: 4rem 0 0 0;
 }
 
+.allowed {
+  padding-bottom: 16px;
+}
